[project]
name = "goldigger"
version = "0.8.0"
description = "A simple yet powerful stock prediction tool with a focus on accuracy and ease of use."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.43",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "matplotlib>=3.9.2",
    "xgboost>=2.1.1",
    "tensorflow>=2.17.0",
    "lightgbm>=4.5.0",
    "tqdm>=4.66.5",
    "ta>=0.11.0",
    "tabulate>=0.9.0",
    "statsmodels>=0.14.2",
    "prophet>=1.1.5",
    "plotly>=5.24.0",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
